[YUNIKORN-2913] Applications view CSS issue

--- a/src/app/components/apps-view/apps-view.component.scss
+++ b/src/app/components/apps-view/apps-view.component.scss
@@ -119,6 +119,10 @@
     --mdc-chip-label-text-weight: 400;
   }
 
+  .selected-row .mat-mdc-standard-chip {
+    --mdc-chip-label-text-color: #fff;
+  }
+
   .mat-mdc-header-cell {
     font-size: 15px;
     font-weight: bold;
