--- a/src/app/components/app-node-utilizations/app-node-utilizations.component.scss
+++ b/src/app/components/app-node-utilizations/app-node-utilizations.component.scss
@@ -15,3 +15,14 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
+ .app-node-utilizations {
+    
+    .title {
+        margin-bottom: 28px;
+    }
+
+    .mat-mdc-card-content {
+        padding: 30px 30px;
+    }
+ }
