--- a/src/app/components/app-status/app-status.component.html
+++ b/src/app/components/app-status/app-status.component.html
@@ -20,7 +20,7 @@
   <mat-card-header>
     <mat-card-title>Application Status</mat-card-title>
   </mat-card-header>
-  <mat-card-content>
+  <mat-card-content class="thin-card-content">
     <div class="status-wrapper flex-grid">
       <div class="chart-wrapper flex-primary">
         <app-donut-chart [data]="chartData"></app-donut-chart>
