--- a/src/app/components/app-status/app-status.component.scss
+++ b/src/app/components/app-status/app-status.component.scss
@@ -18,6 +18,7 @@
 
 .status-wrapper {
   align-items: center;
+  gap: 8px;
   height: 220px;
 }
 .chart-wrapper {
@@ -30,7 +31,7 @@
   overflow: auto;
   margin: 0 auto;
   font-size: 0.8em;
-  font-weight: bold;
+  font-weight: 500;
   color: #666;
   > div {
     margin: 12px 0;
