--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -21,9 +21,14 @@
   margin-bottom: 20px;
 }
 
+.info-label {
+  font-size: 14px;
+  line-height: 19px;
+}
+
 .info-value {
-  margin-top: 6px;
-  font-size: 1.4em;
+  font-size: 18px;
+  line-height: 24px;
 }
 
 .cluster-info {
