--- a/src/app/components/nodes-view/nodes-view.component.scss
+++ b/src/app/components/nodes-view/nodes-view.component.scss
@@ -25,7 +25,7 @@
     padding-right: 40px;
     .part-label {
       color: #333;
-      font-size: 1.2em;
+      font-size: 14px;
       margin-right: 10px;
     }
   }
@@ -53,7 +53,7 @@
       .btn{
         display: block;
         border: none;
-        padding: 13px 24px;
+        padding: 5px 16px;
         border-radius: 5px;
         font-size: 24px;
         transform: translateY(-13px);
@@ -71,7 +71,7 @@
   height: 100%;
   .mat-mdc-header-cell {
     font-size: 15px;
-    font-weight: bold;
+    font-weight: 500;
     color: #666;
   }
   .mat-mdc-cell {
@@ -124,7 +124,9 @@
   .mat-mdc-cell.indicator-icon {
     max-width: 40px;
     font-size: 18px;
-    margin-left: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .node-allocations {
     margin-top: 20px;
@@ -134,7 +136,7 @@
   }
   .no-record {
     font-size: 14px;
-    font-weight: bold;
+    font-weight: 500;
     color: #666;
     width: 100%;
     text-align: center;
@@ -142,5 +144,5 @@
 }
 
 .node-utilizations-view {
-  margin-top: 20px
+  margin-top: 80px
 }
