--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,8 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+@use '@angular/material' as mat;
+
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 
 * {
@@ -26,6 +28,7 @@
 }
 
 body {
+  @include mat.form-field-density(-4); 
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
   color: #666;
@@ -102,6 +105,10 @@ p {
   display: flex;
 }
 
+.align-center {
+  align-items: center;
+}
+
 .flex-primary {
   flex-grow: 1;
 }
@@ -113,15 +120,18 @@ p {
     color: #666;
     background-color: #f7f7f7;
     border-bottom: 1px solid #d5d5d5;
-    padding: 15px 10px;
+    padding: 20px;
   }
   .mat-mdc-card-title {
-    margin-left: -5px;
-    font-weight: bold;
+    font-size: 18px;
+    line-height: 24px;
     margin-bottom: 0 !important;
   }
   .mat-mdc-card-content {
-    padding: 10px;
+    padding: 60px 50px;
+  }
+  .thin-card-content {
+    padding: 60px 16px;
   }
 }
 
