Remove meaningless input placeholder

--- a/src/app/components/nodes-view/nodes-view.component.html
+++ b/src/app/components/nodes-view/nodes-view.component.html
@@ -34,7 +34,7 @@
   <div class="right-wrapper">
     <div class="filter">
       <mat-form-field>
-        <input matInput (keyup)="applyFilter($event)" placeholder="Filter (Ex. amd64)" #input>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Filter" #input>
       </mat-form-field>
     </div>
     
