--- a/src/app/components/nodes-view/nodes-view.component.html
+++ b/src/app/components/nodes-view/nodes-view.component.html
@@ -34,8 +34,7 @@
   <div class="right-wrapper">
     <div class="filter">
       <mat-form-field>
-        <mat-label>Filter</mat-label>
-        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. amd64" #input>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Filter" #input>
       </mat-form-field>
     </div>
     
