[YUNIKORN-2957] Improve visual in dashboard page

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -318,5 +318,8 @@ ul.breadcrumb a.back:after {
 
 .content-wrapper {
   padding: 20px;
-  height: calc(100vh - $header-height);
+
+  &:has(.container-fluid) {
+    height: calc(100vh - $header-height);
+  }
 }
