--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -16,7 +16,7 @@
  * limitations under the License.
  -->
 
-<mat-card appearance="outlined" *ngIf="clusterInfo">
+<mat-card appearance="outlined" *ngIf="clusterInfo" class="top-info">
   <div class="flex-grid align-center">
     <div class="flex-primary">
       <div class="info-label text-uppercase light-text">Name</div>
