--- a/src/app/components/donut-chart/donut-chart.component.html
+++ b/src/app/components/donut-chart/donut-chart.component.html
@@ -16,6 +16,10 @@
  * limitations under the License.
  -->
 
-<div style="width: 100%; height: 100%">
+<div class="donut-chart-wrapper">
   <canvas class="donut-chart" id="{{ chartContainerId }}"></canvas>
+  <div class="total-count">
+    <label class="label">Total</label>
+    <h4 class="value">{{ totalCount }}</h4>
+  </div>
 </div>
