--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,4 +1,4 @@
-/**
+<!--
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -14,34 +14,13 @@
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- */
+ -->
 
-.status-wrapper {
-  align-items: center;
-  gap: 12px;
-  height: 220px;
-}
-.chart-wrapper {
-  max-width: 220px;
-  z-index: 1;
-}
-.chart-legend {
-  min-width: 140px;
-  max-width: 200px;
-  max-height: 220px;
-  overflow: auto;
-  margin: 0 auto;
-  font-size: 0.8em;
-  font-weight: 500;
-  color: #666;
-  > div {
-    margin: 12px 0;
-  }
-  .legend-label {
-    padding-left: 10px;
-  }
-  .legend-value {
-    float: right;
-    padding-right: 20px;
-  }
-}
+<div class="card-wrapper">
+  <div class="header">
+    <ng-content select="[header]"></ng-content>
+  </div>
+  <div class="body">
+    <ng-content></ng-content>
+  </div>
+</div>
