--- a/src/app/components/donut-chart/donut-chart.component.scss
+++ b/src/app/components/donut-chart/donut-chart.component.scss
@@ -16,7 +16,35 @@
  * limitations under the License.
  */
 
+.donut-chart-wrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .donut-chart {
   width: 100%;
   height: 100%;
+}
+
+.total-count {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+
+  .label {
+    font-size: 14px;
+    font-weight: 300;
+  }
+
+  .value {
+    font-size: 28px;
+    font-weight: 500;
+    margin: 4px 0px;
+  }
 }
