--- a/src/app/components/queue-v2/queues-v2.component.html
+++ b/src/app/components/queue-v2/queues-v2.component.html
@@ -16,7 +16,7 @@
  * limitations under the License.
  -->
 
- <div class="queue-container">
+ <div class="queue-container container-fluid">
     <div class="queue-content-box">
       <div class="header">
         <div class="title-group">
