[YUNIKORN-2958] Display foreign allocations on the web UI

--- a/src/app/components/nodes-view/nodes-view.component.scss
+++ b/src/app/components/nodes-view/nodes-view.component.scss
@@ -131,6 +131,10 @@
     margin-top: 20px;
     .mat-mdc-table {
       margin-top: 20px;
+      .mat-column-type {
+         flex: none;
+         width: 60px;
+      }
     }
   }
   .no-record {
