--- a/src/app/components/vertical-bar-chart/vertical-bar-chart.component.html
+++ b/src/app/components/vertical-bar-chart/vertical-bar-chart.component.html
@@ -15,9 +15,6 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  -->
-<!-- <div class="chart-container"> -->
-<div class="flex-grid">
-    <div class="canvas-div">
-        <canvas class="vertical-bar-chart" id="{{ chartContainerId }}"></canvas>
-    </div>
+<div class="chart-wrapper">
+    <canvas class="vertical-bar-chart" id="{{ chartContainerId }}"></canvas>
 </div>
