--- a/src/app/components/vertical-bar-chart/vertical-bar-chart.component.scss
+++ b/src/app/components/vertical-bar-chart/vertical-bar-chart.component.scss
@@ -16,7 +16,12 @@
  * limitations under the License.
  */
 
-.canvas-div {
-    height: 50vh;
+ .chart-wrapper {
     width: 100%;
-}
+    height: 100%;
+
+    .vertical-bar-chart {
+        width: 100%;
+        height: 100%;
+    }
+ }
