--- a/src/app/components/apps-view/apps-view.component.html
+++ b/src/app/components/apps-view/apps-view.component.html
@@ -95,7 +95,7 @@
 
           <ng-template #renderNext_1>
             <ng-container *ngIf="columnDef.colFormatter; else renderNext_2">
-              <mat-cell *matCellDef="let element" [style.flex]="columnDef.colWidth || 1">
+              <mat-cell *matCellDef="let element">
                 <span [innerText]="columnDef.colFormatter(element[columnDef.colId])"></span>
               </mat-cell>
             </ng-container>
@@ -103,7 +103,7 @@
         </ng-template>
 
         <ng-template #renderNext_2>
-          <mat-cell *matCellDef="let element" [style.flex]="columnDef.colWidth || 1">{{ element[columnDef.colId] || 'n/a' }}</mat-cell>
+          <mat-cell *matCellDef="let element">{{ element[columnDef.colId] || 'n/a' }}</mat-cell>
         </ng-template>
       </ng-container>
 
