--- a/src/app/components/healthchecks/healthchecks.component.scss
+++ b/src/app/components/healthchecks/healthchecks.component.scss
@@ -16,7 +16,7 @@
  * limitations under the License.
  */
 
-@import '~material-design-icons/iconfont/material-icons.css';
+@import 'material-design-icons/iconfont/material-icons.css';
 
 .healthcheck-headers-align .mat-expansion-panel-header-title,
 .healthcheck-headers-align .mat-expansion-panel-header-description {
