--- a/src/app/components/healthchecks/healthchecks.component.html
+++ b/src/app/components/healthchecks/healthchecks.component.html
@@ -1,51 +1,54 @@
 <!--
- * Licensed to the Apache Software Foundation (ASF) under one
- * or more contributor license agreements.  See the NOTICE file
- * distributed with this work for additional information
- * regarding copyright ownership.  The ASF licenses this file
- * to you under the Apache License, Version 2.0 (the
- * "License"); you may not use this file except in compliance
- * with the License.  You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- -->
+* Licensed to the Apache Software Foundation (ASF) under one
+* or more contributor license agreements.  See the NOTICE file
+* distributed with this work for additional information
+* regarding copyright ownership.  The ASF licenses this file
+* to you under the Apache License, Version 2.0 (the
+* "License"); you may not use this file except in compliance
+* with the License.  You may obtain a copy of the License at
+*
+*     http://www.apache.org/licenses/LICENSE-2.0
+*
+* Unless required by applicable law or agreed to in writing, software
+* distributed under the License is distributed on an "AS IS" BASIS,
+* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+* See the License for the specific language governing permissions and
+* limitations under the License.
+-->
 
 <mat-accordion class="healthcheck-headers-align">
-    <mat-expansion-panel disabled>
-        <mat-expansion-panel-header>
-            <mat-panel-title>
-                Healthy
-            </mat-panel-title>
-            <mat-panel-description>
-                Scheduler status
-                <ng-container *ngIf="schedulerHealth.Healthy; else SomethingHappens">
-                    <mat-icon>done</mat-icon>
-                </ng-container>
-            </mat-panel-description>
-        </mat-expansion-panel-header>
+  <mat-expansion-panel disabled>
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        Healthy
+      </mat-panel-title>
+      <mat-panel-description>
+        Scheduler status
+        @if (schedulerHealth.Healthy) {
+          <mat-icon>done</mat-icon>
+        } @else {
+          <mat-icon>close</mat-icon>
+        }
+      </mat-panel-description>
+    </mat-expansion-panel-header>
+  </mat-expansion-panel>
+  @for (healthCheck of schedulerHealth.HealthChecks; track healthCheck) {
+    <mat-expansion-panel hideToggle>
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          {{ healthCheck.Name }}
+        </mat-panel-title>
+        <mat-panel-description>
+          {{ healthCheck.Description }}
+          @if (healthCheck.Succeeded) {
+            <mat-icon>done</mat-icon>
+          } @else {
+            <mat-icon>close</mat-icon>
+          }
+        </mat-panel-description>
+      </mat-expansion-panel-header>
+      <p> {{ healthCheck.DiagnosisMessage }} </p>
     </mat-expansion-panel>
-    <mat-expansion-panel hideToggle *ngFor="let healthCheck of schedulerHealth.HealthChecks">
-        <mat-expansion-panel-header>
-            <mat-panel-title>
-                {{ healthCheck.Name }}
-            </mat-panel-title>
-            <mat-panel-description>
-                {{ healthCheck.Description }}
-                <ng-container *ngIf="healthCheck.Succeeded; else SomethingHappens">
-                    <mat-icon>done</mat-icon>
-                </ng-container>
-            </mat-panel-description>
-        </mat-expansion-panel-header>
-        <p> {{ healthCheck.DiagnosisMessage }} </p>
-    </mat-expansion-panel>
+  }
 </mat-accordion>
 
-<ng-template #SomethingHappens>
-    <mat-icon>close</mat-icon>
-</ng-template>
